0.9.0/_sources/generated/statsmodels.discrete.discrete_model.GeneralizedPoissonResults.rst.txt
statsmodels.discrete.discrete_model.GeneralizedPoissonResults
=============================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: GeneralizedPoissonResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~GeneralizedPoissonResults.aic
    
    
      ~GeneralizedPoissonResults.bic
    
    
      ~GeneralizedPoissonResults.bse
    
    
      ~GeneralizedPoissonResults.conf_int
    
    
      ~GeneralizedPoissonResults.cov_params
    
    
      ~GeneralizedPoissonResults.f_test
    
    
      ~GeneralizedPoissonResults.fittedvalues
    
    
      ~GeneralizedPoissonResults.get_margeff
    
    
      ~GeneralizedPoissonResults.initialize
    
    
      ~GeneralizedPoissonResults.llf
    
    
      ~GeneralizedPoissonResults.llnull
    
    
      ~GeneralizedPoissonResults.llr
    
    
      ~GeneralizedPoissonResults.llr_pvalue
    
    
      ~GeneralizedPoissonResults.lnalpha
    
    
      ~GeneralizedPoissonResults.lnalpha_std_err
    
    
      ~GeneralizedPoissonResults.load
    
    
      ~GeneralizedPoissonResults.normalized_cov_params
    
    
      ~GeneralizedPoissonResults.predict
    
    
      ~GeneralizedPoissonResults.prsquared
    
    
      ~GeneralizedPoissonResults.pvalues
    
    
      ~GeneralizedPoissonResults.remove_data
    
    
      ~GeneralizedPoissonResults.resid
    
    
      ~GeneralizedPoissonResults.save
    
    
      ~GeneralizedPoissonResults.set_null_options
    
    
      ~GeneralizedPoissonResults.summary
    
    
      ~GeneralizedPoissonResults.summary2
    
    
      ~GeneralizedPoissonResults.t_test
    
    
      ~GeneralizedPoissonResults.t_test_pairwise
    
    
      ~GeneralizedPoissonResults.tvalues
    
    
      ~GeneralizedPoissonResults.wald_test
    
    
      ~GeneralizedPoissonResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~GeneralizedPoissonResults.use_t
   
   