v0.14.0/_sources/generated/statsmodels.discrete.discrete_model.GeneralizedPoissonResults.rst.txt
statsmodels.discrete.discrete\_model.GeneralizedPoissonResults
==============================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: GeneralizedPoissonResults
   :exclude-members: conf_int,cov_params,f_test,get_diagnostic,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GeneralizedPoissonResults.conf_int
      ~GeneralizedPoissonResults.cov_params
      ~GeneralizedPoissonResults.f_test
      ~GeneralizedPoissonResults.get_diagnostic
      ~GeneralizedPoissonResults.get_distribution
      ~GeneralizedPoissonResults.get_influence
      ~GeneralizedPoissonResults.get_margeff
      ~GeneralizedPoissonResults.get_prediction
      ~GeneralizedPoissonResults.info_criteria
      ~GeneralizedPoissonResults.initialize
      ~GeneralizedPoissonResults.load
      ~GeneralizedPoissonResults.normalized_cov_params
      ~GeneralizedPoissonResults.predict
      ~GeneralizedPoissonResults.remove_data
      ~GeneralizedPoissonResults.save
      ~GeneralizedPoissonResults.score_test
      ~GeneralizedPoissonResults.set_null_options
      ~GeneralizedPoissonResults.summary
      ~GeneralizedPoissonResults.summary2
      ~GeneralizedPoissonResults.t_test
      ~GeneralizedPoissonResults.t_test_pairwise
      ~GeneralizedPoissonResults.wald_test
      ~GeneralizedPoissonResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GeneralizedPoissonResults.aic
      ~GeneralizedPoissonResults.bic
      ~GeneralizedPoissonResults.bse
      ~GeneralizedPoissonResults.fittedvalues
      ~GeneralizedPoissonResults.im_ratio
      ~GeneralizedPoissonResults.llf
      ~GeneralizedPoissonResults.llnull
      ~GeneralizedPoissonResults.llr
      ~GeneralizedPoissonResults.llr_pvalue
      ~GeneralizedPoissonResults.lnalpha
      ~GeneralizedPoissonResults.lnalpha_std_err
      ~GeneralizedPoissonResults.prsquared
      ~GeneralizedPoissonResults.pvalues
      ~GeneralizedPoissonResults.resid
      ~GeneralizedPoissonResults.resid_pearson
      ~GeneralizedPoissonResults.resid_response
      ~GeneralizedPoissonResults.tvalues
      ~GeneralizedPoissonResults.use_t
   
   
   